ARROW-6060: [C++] ChunkedBinaryBuilder should only grow when necessary, address runaway memory use in Parquet binary column read

@wesm  ChunkedBinaryBuilder was increasing capacity by the growth factor on every call to Reserve. Now it will only do so if added capacity is required

Closes #5016 from bkietz/6060-pyarrow-parquet-reader-OOM and squashes the following commits:

5ddc25697 <Benjamin Kietzman> fix test, add clarification to Reserve() docstring
9c5f9aad9 <Benjamin Kietzman> add unit test for new Reserve logic
a5398da34 <Benjamin Kietzman> ChunkedBinaryBuilder should only grow when necessary
c31f95f1b <Benjamin Kietzman> add install prefix to build summaries

Authored-by: Benjamin Kietzman <bengilgit@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>